--- a/.gitbook.yml
+++ b/.gitbook.yml
@@ -3,7 +3,7 @@ root: ./
 structure:
   readme: README.md
   summary: SUMMARY.md
-  g3docs: g3docs/*
+  g3docs: g3docs/this-too.md
 
 redirects:
   previous/page: new-folder/page.md
